--- a/DatabaseExam/package.json
+++ b/DatabaseExam/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^2.2.33",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "redis": "^2.8.0",
     "serve-favicon": "~2.4.5"
   }
 }
